--- a/01.maven介绍与环境搭建.md
+++ b/01.maven介绍与环境搭建.md
@@ -1,1 +1,18 @@
+#1 下载安装
 
+apache maven官网下载bin.zip最新文件
+
++ 解压配置
++ 配置环境变量（M2_HOME PATH）
++ 验证：maven -v
+
+
+#maven项目目录
+```
+src 
+  -main
+    -java
+  -test
+    -java
+  -resource
+```
